# netputer

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
discussion/: shape_inference.md
docs/: netputer-whitepaper-v1.2.md  netputer-whitepaper-v1.3.md  netputer-whitepaper.md
spec/: npf-spec-v1.0.md  npf-spec-v1.3.md  npf-spec.md
tools/npf-toolkit/: .gitignore  Cargo.toml  README.md
tools/npf-toolkit/crates/npf/: Cargo.toml
tools/npf-toolkit/crates/npf-gen/: Cargo.toml
tools/npf-toolkit/crates/npf-gen/src/: main.rs
tools/npf-toolkit/crates/npf-train-xor/: Cargo.toml
tools/npf-toolkit/crates/npf-train-xor/src/: main.rs
tools/npf-toolkit/crates/npf-validate/: Cargo.toml
tools/npf-toolkit/crates/npf-validate/src/: main.rs
tools/npf-toolkit/crates/npf/src/: error.rs  lib.rs  parse.rs  types.rs  write.rs
tools/npf-toolkit/fixtures/: xor.npf
tools/npf-toolkit/src/: lib.rs
tools/npf-toolkit/tests/: integration.rs
