[workspace]
resolver = "2"
members = [
    "crates/npf",
    "crates/npf-validate",
    "crates/npf-gen",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
npf = { path = "crates/npf" }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
crc32fast = "1.4"
rand = "0.8"
assert_cmd = "2.0"
