[workspace]
resolver = "2"
members = [
    "crates/npf",
    "crates/npf-validate",
    "crates/npf-gen",
    "crates/npf-train-xor",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
npf = { path = "crates/npf" }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
crc32fast = "1.4"
rand = "0.8"
assert_cmd = "2.0"

# Root package exists solely to host workspace-level integration tests under
# tools/npf-toolkit/tests/. It has no runtime code of its own.
[package]
name = "npf-toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Workspace-level integration tests for the npf toolkit."

[lib]
path = "src/lib.rs"

[dev-dependencies]
npf.workspace = true
assert_cmd.workspace = true
